--- a/McpServer.csproj
+++ b/McpServer.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
     <PackageReference Include="ModelContextProtocol" Version="0.3.0-preview.2" />
+    <PackageReference Include="OwlCore.Kubo" Version="0.21.1" />
+    <PackageReference Include="OwlCore.Storage" Version="0.12.3" />
   </ItemGroup>
 
 </Project>
