feat: Add dynamic folder mounting with custom protocols and cross-instance persistence
- Add mount/unmount/rename operations to ProtocolRegistry with cycle detection
- Create MCP server tools for mounting operations (MountFolder, UnmountFolder, RenameMountedFolder)
- Add persistence system with JSON serialization for mount configurations
- Implement cross-instance mount synchronization using AppData\Roaming shared location
- Support symlink-to-symlink mounting with dependency resolution and ordering
- Add comprehensive cycle detection using DFS algorithm to prevent mount loops
- Include atomic rename operations for mounted folders with protocol scheme validation
- Auto-restore persisted mounts on server startup with proper error handling

This enables users to mount any IFolder with custom protocol schemes (e.g., notes://,
desktop://, onedrive://) creating symlink-like functionality for easier filesystem
navigation. Mounts persist across server restarts and sync between MCP instances.

--- a/McpServer.csproj
+++ b/McpServer.csproj
@@ -8,8 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.4.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
     <PackageReference Include="ModelContextProtocol" Version="0.3.0-preview.2" />
+    <PackageReference Include="OwlCore.ComponentModel.Settings" Version="0.1.1" />
     <PackageReference Include="OwlCore.Kubo" Version="0.21.1" />
     <PackageReference Include="OwlCore.Storage" Version="0.12.3" />
   </ItemGroup>
