--- a/OwlCore.Storage.Mcp.csproj
+++ b/OwlCore.Storage.Mcp.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="OwlCore.ComponentModel.Settings" Version="0.1.1" />
     <PackageReference Include="OwlCore.Kubo" Version="0.21.1" />
     <PackageReference Include="OwlCore.Storage" Version="0.13.1" />
+    <PackageReference Include="OwlCore.Storage.SharpCompress" Version="0.1.2" />
   </ItemGroup>
 
 </Project>
