--- a/OwlCore.Storage.Mcp.csproj
+++ b/OwlCore.Storage.Mcp.csproj
@@ -11,10 +11,14 @@
     <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.4.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
     <PackageReference Include="ModelContextProtocol" Version="0.3.0-preview.2" />
+    <PackageReference Include="OwlCore" Version="0.6.1" />
     <PackageReference Include="OwlCore.ComponentModel.Settings" Version="0.1.1" />
     <PackageReference Include="OwlCore.Kubo" Version="0.21.1" />
     <PackageReference Include="OwlCore.Storage" Version="0.13.1" />
-    <PackageReference Include="OwlCore.Storage.SharpCompress" Version="0.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OwlCore.Console\ocstoragesharpcompress\src\OwlCore.Storage.SharpCompress.csproj" />
   </ItemGroup>
 
 </Project>
