--- a/OwlCore.Storage.Mcp.csproj
+++ b/OwlCore.Storage.Mcp.csproj
@@ -13,12 +13,7 @@
     <PackageReference Include="ModelContextProtocol" Version="0.3.0-preview.2" />
     <PackageReference Include="OwlCore" Version="0.6.1" />
     <PackageReference Include="OwlCore.ComponentModel.Settings" Version="0.1.1" />
-    <PackageReference Include="OwlCore.Kubo" Version="0.21.1" />
+    <PackageReference Include="OwlCore.Kubo" Version="0.22.1" />
     <PackageReference Include="OwlCore.Storage" Version="0.14.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\OwlCore.Console\ocstoragesharpcompress\src\OwlCore.Storage.SharpCompress.csproj" />
-  </ItemGroup>
-
+    <PackageReference Include="OwlCore.Storage.SharpCompress" Version="0.1.3" />
 </Project>
